# rust-htmx

./: Cargo.toml
src/: main.rs  number.rs  raffle.rs
src/login/: login_page.rs
src/number/: number_routing.rs
src/raffle/: raffle_page.rs  raffle_repository.rs  raffle_routing.rs
static/templates/: error.html  index.html  parent.html  rifas.html
static/templates/login/: login.html
