[package]
name = "rifa-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
handlebars = { version = "4.2.1", features = ["dir_source"] }
sqlx = { version = "0.7", features = [ "runtime-async-std" , "sqlite"] }
